# wite

./: .gitignore  AGENTS.md  README.ja.md  README.mbt.md  README.md  TODO.md  justfile  moon.mod.json
.github/workflows/: ci.yml
bench/: KPI.md
bench/corpus/: README.md  manifest.tsv
bench/kpi/: .gitignore
docs/: analyze.md  moonbit-to-component.md  spec.md
examples/minimal/: README.md  main.wac
examples/moonbit-js/: README.md  main.mbt  moon.mod.json  moon.pkg  run.mjs
examples/moonbit-mixed/: .gitignore  README.md  main.wac  wite.config.jsonc
examples/moonbit-mixed/guest/rust/: Cargo.toml
examples/moonbit-mixed/guest/rust/src/: bindings.rs  lib.rs
examples/moonbit-mixed/guest/rust/wit/: world.wit
examples/moonbit-rust/: .gitignore  README.md  main.wac
examples/moonbit-wasi/: .gitignore  Makefile  README.md  main.mbt  moon.mod.json  moon.pkg  wite.config.jsonc
examples/quickstart/: .gitignore  README.md
examples/sample_app/: .gitignore  README.md  main.wac  wite.config.jsonc
examples/wat-moonbit/: README.md  main.wac
examplesl/minimal/: README.md
examplesl/quickstart/: README.md
scripts/: bench_analyze_speed.js  bench_optimize_speed.js  collect_kpi.sh  sync_bench_corpus.sh
spec/: README.md  completed-2026-02.md
src/: API.mbt.md  lib.mbt  lib_bench.mbt  lib_test.mbt  moon.pkg  pkg.generated.mbti  runtime_profile_stub.mbt  top.mbt
src/analyze/: analyze.mbt  analyze_basic.mbt  analyze_breakdown.mbt  analyze_callgraph_host.mbt  analyze_function_gap.mbt  analyze_optimize_metadata.mbt  analyze_retention.mbt  analyze_wbtest.mbt  moon.pkg  (+10 more)
(+114 files in other folders)
