[package]
name = "guest-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "example:rust-guest"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
wit-bindgen = { version = "0.44.0", default-features = false, features = ["realloc", "macros"] }
